# Lesson

./: .gitignore  111.json  README.md  apply_patch.ps1  patch.diff
Lesson/: CMakeLists.txt  DetectionResult.cpp  DetectionResult.h  InferWorker.h  InferenceEngine.cpp  InferenceEngine.h  WSIHandler.cpp  WSIHandler.h  main.cpp
backend/: app.py  environment.yml  requirements.txt  run_backend.ps1  schemas.py
backend/inference/: opencv_model.py
backend/src/: app.py
frontend/: CMakeLists.txt  imagelabel.cpp  imagelabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  wsiviewer.cpp  wsiviewer.h
frontend/src/: DetectionResult.cpp  DetectionResult.h  HttpClient.cpp  HttpClient.h  InferenceClient.cpp  InferenceClient.h  MainWindow.cpp  MainWindow.h  MiniMapWidget.cpp  MiniMapWidget.h  WSIHandler.cpp  WSIHandler.h  WSIView.cpp  WSIView.h  wsiviewer.h
frontend/ui/: mainwindow.ui
shared/: result_schema.json
